# kiara_plugin.network_analysis

./: .copier-answers.yml  .cruft.json  .envrc  .envrc.disabled  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  dev.py  mkdocs.yml  pixi.toml  pyproject.toml  setup.cfg  setup.py  versions.json
.github/ISSUE_TEMPLATE/: suggest-a-module.md
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
ci/conda/: build-conda-packages.sh  conda-pkg-patch.yaml
ci/conda/kiara_modules.network_analysis/: meta.yaml.template
ci/conda/kiara_plugin.network_analysis/: meta.yaml.template
docs/: SUMMARY.md  development.md  index.md  usage.md
docs/.scripts/: gen_api_doc_pages.py  gen_info_pages.py
docs/notebooks/: create_journals_network.ipynb  create_simple_network.ipynb  getting_started.ipynb  getting_started.py
docs/notebooks/layouts/: getting_started.grid.json
docs/notebooks/marimo/: getting_started.py
examples/data/: Readme.md
examples/data/JSON/: Readme.md  peacetreaties.json
examples/data/gexf/: Readme.md  lesmis.gexf  quakers.gexf
examples/data/gml/: Readme.md
examples/data/journals/: JournalEdges1902.csv  JournalNodes1902.csv
examples/data/quakers/: Readme.md
examples/data/simple_networks/bipartite/: README.md  SampleEdges.csv  SampleNodes.csv
examples/data/simple_networks/connected/: SampleEdges.csv  SampleNodes.csv
examples/data/simple_networks/two_components/: SampleEdges.csv  SampleNodes.csv
examples/data/treaties/: Readme.md  peace_treaties_rus.csv
examples/data/wikipedia/: sample-edges.csv  sample-nodes.csv  wikipedia_sample_edges.csv  wikipedia_sample_nodes.csv
examples/jobs/: Readme.md  create_journals_network.yaml  create_simple_disconnected_network.yaml  create_simple_network.yaml  example_job_network_analysis.yaml  extract_components.yaml
examples/jobs/notebooks/: create_journals_network.ipynb  create_simple_network.ipynb  utilities.ipynb
examples/notebooks/: Projections.ipynb
examples/pipelines/: create_network_graph.yaml  example_pipeline_network_analysis.yaml  simple_graph.yaml
examples/runs/: journal_components.run
examples/scripts/: create_network_data.py
examples/streamlit/: explore_network_data.py  simple_graph.py
latest/: 404.html  index.html  objects.inv
latest/SUMMARY/: index.html
latest/info/SUMMARY/: index.html
latest/info/data_types/: index.html
latest/info/kiara_model_types/: index.html
latest/info/module_types/: index.html
latest/info/operations/: index.html
latest/notebooks/marimo/: getting_started.py
latest/reference/SUMMARY/: index.html
latest/reference/kiara_plugin/network_analysis/__init__/: index.html
latest/reference/kiara_plugin/network_analysis/data_types/: index.html
latest/reference/kiara_plugin/network_analysis/defaults/: index.html
latest/reference/kiara_plugin/network_analysis/models/__init__/: index.html
latest/reference/kiara_plugin/network_analysis/models/metadata/: index.html
latest/reference/kiara_plugin/network_analysis/modules/__init__/: index.html
latest/reference/kiara_plugin/network_analysis/modules/create/: index.html
latest/reference/kiara_plugin/network_analysis/modules/filter/: index.html
latest/reference/kiara_plugin/network_analysis/pipelines/__init__/: index.html
latest/reference/kiara_plugin/network_analysis/utils/__init__/: index.html
latest/search/: search_index.json
latest/usage/: index.html
scripts/documentation/: gen_api_doc_pages.py  gen_info_pages.py  gen_module_doc.py  gen_ref_pages.py
src/kiara_modules/network_analysis/: __init__.py  defaults.py  graph.py  graphs.py  metadata_models.py  metadata_schemas.py  network_analysis.py  network_data.py  network_graph.py  utils.py  value_types.py
src/kiara_modules/network_analysis/network_data/: __init__.py
src/kiara_modules/network_analysis/network_data/find/: __init__.py
src/kiara_modules/network_analysis/pipelines/: __init__.py  network_analysis.json
src/kiara_modules/network_analysis/pipelines/graph/: from_csv.json  load.json
src/kiara_modules/network_analysis/pipelines/graphs/: import_network_graph.json  load_network_graph.json
src/kiara_modules/network_analysis/pipelines/network_graph/: analyze.json  load.json
src/kiara_modules/network_analysis/pipelines/network_graph/import/: from_local_files.json
src/kiara_modules/network_analysis/resources/pipelines/: import_network_graph.json  network_analysis.json
src/kiara_modules/network_analysis/resources/templates/: network_data_schama.sql.j2
src/kiara_plugin/network_analysis/: __init__.py  data_types.py  defaults.py  models.py  network_analysis.py  utils.py
src/kiara_plugin/network_analysis/models/: __init__.py  inputs.py  metadata.py
src/kiara_plugin/network_analysis/modules/: __init__.py  components.py  create.py  export.py  filter.py  filters.py  ranking.py  rendering.py
src/kiara_plugin/network_analysis/pipelines/: __init__.py  assemble.network_data.from.files.json  create.network_data.from.files.json  import.network_data.from.csv_files.json  import.network_data.from.local_file_paths.json  import.network_data.from.local_files.json
src/kiara_plugin/network_analysis/streamlit/components/: __init__.py  data_import.py
src/kiara_plugin/network_analysis/utils/: __init__.py
src/kiara_plugin/network_analysis/utils/notebooks/: jupyter.py  marimo.py
tests/: conftest.py  test_create_network_data.py  test_file_import.py  test_job_descs.py  test_kiara_modules_default.py  test_network_data_type.py
tests/job_tests/create_journals_network/: outputs.py  outputs.yaml
v0.5.2/: 404.html  index.html  objects.inv
v0.5.2/SUMMARY/: index.html
v0.5.2/notebooks/jupyter/: getting_started.ipynb
v0.5.2/notebooks/marimo/: getting_started.py
v0.5.2/reference/kiara_plugin/network_analysis/data_types/: index.html
v0.5.2/reference/kiara_plugin/network_analysis/models/metadata/: index.html
v0.5.2/reference/kiara_plugin/network_analysis/modules/__init__/: index.html
v0.5.2/usage/: index.html
(+7 files in other folders)
