[build-system]
requires = [
    "hatchling>=1.18.0",
    "hatch-vcs>=0.3.0",
]
build-backend = "hatchling.build"

[project]
name = "kiara_plugin.network_analysis"
description = "Network-related data-types, modules and pipelines for kiara."
authors = [
    {name = "Markus Binsteiner", email = "markus@frkl.dev"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["kiara"]
license = {text = "MPL-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "graphviz>=0.21",
    "kiara>=0.5.14,<0.6.0",
    "kiara_plugin.core_types>=0.5.2,<0.6.0",
    "kiara_plugin.tabular>=0.5.6,<0.6.0",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "pydot>=4.0.0",
    "rustworkx>=0.16.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "kiara[dev_utils]",
    "pytest-cov>=4.1.0",
]

[project.entry-points."kiara.plugin"]
network_analysis = "kiara_plugin.network_analysis"

[project.entry-points."kiara.data_types"]
network_analysis = "kiara_plugin.network_analysis:find_data_types"

[project.entry-points."kiara.model_classes"]
network_analysis = "kiara_plugin.network_analysis:find_model_classes"

[project.entry-points."kiara.modules"]
network_analysis = "kiara_plugin.network_analysis:find_modules"

[project.entry-points."kiara.pipelines"]
network_analysis = "kiara_plugin.network_analysis:find_pipelines"


[project.urls]
homepage = "https://github.com/DHARPA-Project/kiara_plugin.network_analysis"
documentation = "https://DHARPA-Project.github.io/kiara_plugin.network_analysis"
repository = "https://github.com/DHARPA-Project/kiara_plugin.network_analysis"

[project.optional-dependencies]
marimo = [
    "altair>=5.5.0",
    "marimo>=0.13.15",
    "plotly>=6.1.2",
]

jupyter = [
    "jupyter"
]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | external
)/
'''

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/kiara_plugin/network_analysis/version.txt"

[tool.hatch.build.targets.wheel]
packages = ["src/kiara_plugin"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
addopts = "--verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["kiara_plugin.network_analysis"]
relative_files = true

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88

src = ["src", "tests"]

fix = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
    ".venv"
]

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["E", "F", "RUF100", "I001", "Q", "D"]

select = [
    "E",
    "F",
    "RUF",
    "I001",
    "YTT",
    "S",
    "C4",
    "T10",
    "ISC",
    "ICN",
    "T20",
    "Q",
    "TID",
    "PD",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PIE",
]

ignore = ["E501", "S101", "SIM118", "SIM108", "PLR2004", "PLR0913", "S110", "PIE810", "PLR0911", "PLR0915", "PLR0912", "D", "D401", "PLW0603", "PLR5501", "PLW2901", "S603", "S608", "ISC001", "PLC0206", "RUF022"]
per-file-ignores = { }

[tool.ruff.lint.isort]
known-first-party = ["kiara", "kiara_plugin"]


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
plugins = [
    "pydantic.mypy"
]


# mypy per-module options:
[[tool.mypy.overrides]]
module = [
    "appdirs.*",
    "pyarrow.*",
    "ruamel.*"
]
ignore_missing_imports = true

[tool.pixi.project]
channels = ["dharpa", "conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
pip = ">=24.0,<25"

[tool.pixi.pypi-dependencies]
network_analysis = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
#dev = { features = ["dev_utils"], solve-group = "default" }

[tool.pixi.tasks]
pre-commit-check = "pre-commit run --all-files"
tests = "py.test"
mypy = "mypy  --namespace-packages --explicit-package-base src/kiara_plugin/network_analysis"
kiara = "kiara"
show-versions = "kiara --version"
delete-context = "kiara context delete"
install-dev-dependencies = "pip install --upgrade -e '.[dev_utils]'"
