[options]
packages = find_namespace:
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 0

[devpi:upload]
no-vcs = 1
formats = sdist, bdist_wheel

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tox:tox]
envlist = py36, py37, py38, flake8

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -e{toxinidir}[dev_testing,all]
install_command = pip install --pre --extra-index-url https://pypi.fury.io/dharpa/ {opts} {packages}
commands =
    pip install -U pip
    py.test --basetemp={envtmpdir}

[coverage:run]
branch = True
source = kiara_plugin.network_analysis

[coverage:paths]
source =
    src/
    */site-packages/

[coverage:report]
exclude_lines =
    pragma: no cover
   
    def __repr__
    if self\.debug
   
    raise AssertionError
    raise NotImplementedError
   
    if 0:
    if __name__ == .__main__.:

[mypy]
mypy_path =
    src/
namespace_packages = true
plugins = pydantic.mypy

[mypy-appdirs]
ignore_missing_imports = true

[mypy-asyncclick]
ignore_missing_imports = true

[mypy-devtools]
ignore_missing_imports = true

[mypy-gensim.*]
ignore_missing_imports = true

[mypy-pandas]
ignore_missing_imports = true

[mypy-nltk.*]
ignore_missing_imports = true

[mypy-it_core_news_sm]
ignore_missing_imports = true

[mypy-networkx.*]
ignore_missing_imports = true

[mypy-pyarrow.*]
ignore_missing_imports = true

[mypy-ruamel.*]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true
